<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_join_title"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/login_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_join_logo"
            android:layout_width="181dp"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:elevation="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/login_title_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_join_title" />

        <TextView
            android:id="@+id/tv_join"
            style="@style/Text.Small18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="회원가입"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_join_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_join_id"
            style="@style/Widget.App.TextInputLayoutStyle"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@drawable/select_input_layout_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_join">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/join_input_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_check_duplicate"
            style="@style/Text.normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="중복확인"
            android:background="@drawable/background_button_radius10"
            app:layout_constraintStart_toEndOf="@id/til_join_id"
            app:layout_constraintTop_toTopOf="@id/til_join_id"
            app:layout_constraintBottom_toBottomOf="@id/til_join_id"
            android:textColor="@color/white"
            android:layout_marginStart="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_join_nickname"
            style="@style/Widget.App.TextInputLayoutStyle"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@drawable/select_input_layout_color"
            app:layout_constraintStart_toStartOf="@id/til_join_id"
            app:layout_constraintTop_toBottomOf="@id/til_join_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/join_input_nickname" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_join_pw"
            style="@style/Widget.App.TextInputLayoutStyle"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@drawable/select_input_layout_color"
            app:layout_constraintStart_toStartOf="@id/til_join_id"
            app:layout_constraintTop_toBottomOf="@id/til_join_nickname">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/join_input_pw" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/Text.normal"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_join_pw"
            android:background="@drawable/background_button"
            android:text="회원가입"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>