<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_login_title"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/login_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="181dp"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:elevation="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/login_title_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/Text.Small18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_login_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_id"
            style="@style/Widget.App.TextInputLayoutStyle"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@drawable/select_input_layout_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_pw"
            style="@style/Widget.App.TextInputLayoutStyle"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@drawable/select_input_layout_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_login_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_pw" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_join"
            style="@style/Text.normal12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/tv_forget_pw"
            app:layout_constraintTop_toTopOf="@id/tv_forget_pw"
            android:textSize="12sp"
            android:textColor="@color/black_a67"
            android:layout_marginEnd="10dp"
            android:text="회원가입" />

        <TextView
            android:id="@+id/tv_forget_pw"
            style="@style/Text.normal12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="비밀번호를 잊어버리셨나요?"
            android:textColor="@color/black_a67"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/til_login_pw"
            app:layout_constraintTop_toBottomOf="@id/til_login_pw" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/Text.normal"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forget_pw"
            android:background="@drawable/background_button"
            android:text="로그인"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="40dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


